
= podoff CHANGELOG.txt


== podoff 1.1.1  not yet released


== podoff 1.1.0  released 2015-10-25

- more tolerant at parsing (StringScanner)
- bin/podoff
- Document#rewrite(path)


== podoff 1.0.0  released 2015-10-23

- leverage incremental updates


== podoff 0.9.1  not released

- ensure Obj#contents accepts arrays


== podoff 0.9.0  released 2015-10-21

- beta release


== podoff 0.0.1  released 2015-10-20

- initial, empty, release
